--- a/src/pages/homePage/HomePage.module.css
+++ b/src/pages/homePage/HomePage.module.css
@@ -1,6 +1,7 @@
-.container {
+.HomePageContainer {
   max-width: 1200px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
@@ -30,4 +31,10 @@
 
 .icon {
   font-size: 24px;
+}
+
+.description {
+  margin-bottom: 20px;
+  font-size: 18px;
+  color: #333;
 }
