--- a/src/components/container/Container.module.css
+++ b/src/components/container/Container.module.css
@@ -1,10 +1,10 @@
 .container {
-  max-width: 320px;
-  padding: 0 20px;
+  max-width: 1200px;
+  /* padding: 0 20px; */
   margin: 0 auto;
-  text-align: center;
+  /* text-align: center; */
 }
-
+/* 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -23,4 +23,4 @@
   .container {
     max-width: 1440px;
   }
-}
+} */
