--- a/src/components/container/Container.module.css
+++ b/src/components/container/Container.module.css
@@ -2,7 +2,7 @@
   max-width: 1200px;
   /* padding: 0 20px; */
   margin: 0 auto;
-  /* text-align: center; */
+  text-align: center;
 }
 /* 
 @media screen and (min-width: 768px) {
