--- a/src/components/container/Container.module.css
+++ b/src/components/container/Container.module.css
@@ -1,8 +1,7 @@
 .container {
   max-width: 1200px;
-  /* padding: 0 20px; */
+  padding: 0 20px;
   margin: 0 auto;
-  text-align: center;
 }
 /* 
 @media screen and (min-width: 768px) {
