--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
+  background-color: #f5f5f5;
 }
 
 h1,
