--- a/src/components/loader/Loader.module.css
+++ b/src/components/loader/Loader.module.css
@@ -1,5 +1,9 @@
-.loaderContainer {
+.loader {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
